[package]
name = "stocks"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/uzaaft/stocks"
documentation = "TBD"
keywords = ["Stocks", "CLI","stonks"]
authors = ["Uzair Aftab 'uzaaft@outlook.com"]
categories = ["command-line-utilities"]
description  = "A collection of useful commands for stock lovers"
readme = "README.md"
default-run = "stocks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.10"

